--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -12,11 +12,9 @@
   <body>
     <div class="game">
       <h1 class="titre">Monde parallèle</h1>
-        <h2 class="titre-chapitre">Sed ut perspiciatis</h2>
+        <h2 class="titre-chapitre">Obstacle</h2>
           <p class="texte">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-            veniam
+            Vous êtes dans un monde parallèle. Vous commencez à marcher et vous voyez une crevasse.
           </p>
       <img
         src="assets/Hot-photo-toile-de-fond-for-t-enchant-e-photo-stand-accessoires-nature-paysage-photographie-fond.jpg" width="500" height="600"
